--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,19 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string-array name ="units">
+        <item>Select unit of measurement</item>
+        <item>tsp</item>
+        <item>tbsp</item>
+        <item>c</item>
+        <item>pt</item>
+        <item>qt</item>
+        <item>gal</item>
+        <item>fl oz</item>
+        <item>oz</item>
+        <item>g</item>
+        <item>lb</item>
+        <item>l</item>
+        <item>ml</item>
+    </string-array>
 </resources>
