Near completion with AddRecipe, successfully implemented:  - Creating, editing, and deleting ingredients that are stored in an ingredients list  - That ingredients list gets saved under a recipe name and stored into an SQLite database  - Error prevention with pop ups to combat empty inputs and ingredient amounts more than 10
Still need to:
 - Implement error prevention for empty list of ingredients and cancelling adding a new recipe
 - Number each ingredient  as they are added

What's coming next:
 - Implementation of the recipe book
 - Complete UI Overhaul
 - Implementation of the portion calculator

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
         <item>Select unit of measurement</item>
         <item>tsp</item>
         <item>tbsp</item>
-        <item>c</item>
+        <item>cup(s)</item>
         <item>pt</item>
         <item>qt</item>
         <item>gal</item>
@@ -23,5 +23,7 @@
         <item>lb</item>
         <item>l</item>
         <item>ml</item>
+        <item>pinch(es)</item>
+        <item>piece(s)</item>
     </string-array>
 </resources>
